--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,5 @@
 <h3>Cart</h3>
+<a routerLink="/shipping">Shipping Prices</a>
 <div class="cart">
         <div class="cart-item" *ngFor="let item of items">
                 <h3> {{ item.name }} </h3>
@@ -10,3 +11,20 @@
                 </div>
               </div>
 </div>
+<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
+        <div>
+                <label for="name">
+                  Name
+                </label>
+                <input id="name" type="text" formControlName="name">
+              </div>
+            
+              <div>
+                <label for="address">
+                  Address
+                </label>
+                <input id="address" type="text" formControlName="address">
+              </div>
+        <button class="button" type="submit">Purchase</button>
+      
+      </form>
